# osa-plugins/pyproject.toml

[project]
name = "osa-plugins"
version = "0.1.0"
description = "Optical Spectrum Analyzer Instrument Plugins"
authors = [
  { name="Jesse Orosco", email="jesse.orosco@santec.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = ["pyvisa"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
